Add the ability to implement containers with composable view bindings.

--- a/kotlin/settings.gradle
+++ b/kotlin/settings.gradle
@@ -23,6 +23,7 @@ include ':samples:containers:app-poetry'
 include ':samples:containers:app-raven'
 include ':samples:containers:android'
 include ':samples:containers:common'
+include ':samples:containers:compose'
 include ':samples:containers:hello-back-button'
 include ':samples:containers:poetry'
 include ':samples:dungeon:app'
