Introduce WorkflowContainer for running a workflow inside a Compose app.

--- a/kotlin/settings.gradle
+++ b/kotlin/settings.gradle
@@ -30,6 +30,7 @@ include ':samples:dungeon:app'
 include ':samples:dungeon:common'
 include ':samples:dungeon:timemachine'
 include ':samples:dungeon:timemachine-shakeable'
+include ':samples:hello-compose'
 include ':samples:hello-compose-binding'
 include ':samples:hello-terminal:hello-terminal-app'
 include ':samples:hello-terminal:terminal-workflow'
