Introduce tooling module with support for previewing ViewBindings with Compose's Preview.

--- a/kotlin/settings.gradle
+++ b/kotlin/settings.gradle
@@ -49,6 +49,7 @@ include ':workflow-testing'
 include ':workflow-tracing'
 include ':workflow-ui:backstack-common'
 include ':workflow-ui:backstack-android'
+include ':workflow-ui:compose-tooling'
 include ':workflow-ui:core-common'
 include ':workflow-ui:core-compose'
 include ':workflow-ui:core-android'
