--- a/kotlin/samples/containers/compose/build.gradle
+++ b/kotlin/samples/containers/compose/build.gradle
@@ -48,5 +48,6 @@ dependencies {
   implementation deps.compose.material
   implementation deps.rxjava2.rxjava2
 
+  compileOnly project(':workflow-ui:compose-tooling')
   compileOnly deps.compose.tooling
 }
